--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 
   <button onclick="searchAndFetch()">Search and Fetch</button>
 
-  <script src="your-script.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
